# sdl2dsu

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  checks.yaml  filename.yaml  publish.yaml
examples/serviceondemand/: sdl2dsu copy.service  sdl2dsu.service
examples/simpleservice/: sdl2dsu.service
resources/: sdl2dsu.desktop  windows.rc
scripts/: sdl2dsu.service
src/: CMakeLists.txt  main.cpp
src/gamepads/: enumerator.cpp  enumerator.h  gamepadhandle.cpp  gamepadhandle.h  gamepadmanager.cpp  gamepadmanager.h  handleaxisupdate.cpp  handleaxisupdate.h  handlebatteryupdate.cpp  handlebatteryupdate.h  handlebuttonupdate.cpp  handlebuttonupdate.h  handlesensorupdate.cpp  handlesensorupdate.h  handletouchpadupdate.cpp  handletouchpadupdate.h
src/server/: activeclients.cpp  activeclients.h  clientendpoint.cpp  clientendpoint.h  clientendpointcounter.cpp  clientendpointcounter.h  common.cpp  common.h  communication.cpp  communication.h  deserialiser.cpp  deserialiser.h  serialiser.cpp  serialiser.h
src/shared/: gamepaddata.h
